<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".choice_money">

    <FrameLayout
        android:id="@+id/pop_money"
        android:layout_width="410dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/filter">

        <TextView
            android:id="@+id/init_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="10dp"
            android:text="@string/choice_money"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <Button
            android:id="@+id/twenty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="50dp"
            android:text="@string/twenty" />

        <Button
            android:id="@+id/thirty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="50dp"
            android:text="@string/thirty" />

        <Button
            android:id="@+id/forty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="100dp"
            android:text="@string/forty" />

        <Button
            android:id="@+id/fifty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="100dp"
            android:text="@string/fifty" />


    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>